--- a/appdaemon/apps/air_cleaner/air_cleaner.yaml
+++ b/appdaemon/apps/air_cleaner/air_cleaner.yaml
@@ -6,14 +6,14 @@ air_cleaner:
   dependencies:
     - presence_helper
     - notification_manager
-air_cleaner_schedule:
-  module: air_cleaner
-  class: AirCleanerSchedule
-  global_dependencies: globals
-  auto_time: '11:00:00'
-  turbo_time: '19:00:00'
-  quiet_time: '21:00:00'
-  constrain_input_boolean: input_boolean.ad_air_cleaner,on
-  dependencies:
-    - presence_helper
-    - notification_manager
+# air_cleaner_schedule:
+#   module: air_cleaner
+#   class: AirCleanerSchedule
+#   global_dependencies: globals
+#   auto_time: '11:00:00'
+#   turbo_time: '19:00:00'
+#   quiet_time: '21:00:00'
+#   constrain_input_boolean: input_boolean.ad_air_cleaner_schedule,on
+#   dependencies:
+#     - presence_helper
+#     - notification_manager
