--- a/packages/cameras/camera_dafang_1.yaml
+++ b/packages/cameras/camera_dafang_1.yaml
@@ -1,16 +1,16 @@
 binary_sensor:
   - platform: ffmpeg_motion
-    name: Attic motion
+    name: Dafang 1 motion
     input: !secret dafang_stream_source
 camera:
   - platform: generic
-    name: Attic
+    name: Dafang 1
     still_image_url: !secret dafang_stream_still_image_url
     verify_ssl: false
     username: "root"
     password: !secret dafang_password
     authentication: basic
-
+    
 switch:
   platform: command_line
   scan_interval: 35
@@ -22,7 +22,7 @@ switch:
     dafang_night_vision:
       command_on: !secret dafang_night_vision_on
       command_off: !secret dafang_night_vision_off
-      friendly_name: Dafang Server
+      friendly_name: Dafang Night Mode
     dafang_calibrate:
       command_on: !secret dafang_calibrate
       command_off: !secret dafang_calibrate
