--- a/packages/house/windows.yaml
+++ b/packages/house/windows.yaml
@@ -1,14 +1,3 @@
-homeassistant:
-  customize:
-    binary_sensor.bedroom_window:
-      friendly_name: Bedroom window
-  customize_glob:
-    sensor.*window*:
-      templates:
-        hs_color: "if (state === 'Closed') return [0, 0];
-        else if (state === 'Unknown') return [40, 70];
-        else if (state === 'Open') return [0, 85];"
-
 sensor:
   - platform: template  
     sensors:
@@ -22,6 +11,13 @@ sensor:
         entity_id: "binary_sensor.bedroom_window"
         value_template: '{% if is_state("binary_sensor.bedroom_window", "on") %}Open{% elif is_state("binary_sensor.bedroom_window", "off")%}Closed{% else %}Unknown{% endif %}'
         icon_template: '{% if is_state("binary_sensor.bedroom_window", "on") %}mdi:window-open{% elif is_state("binary_sensor.bedroom_window", "off")%}mdi:window-closed{% else %}mdi:comment-question-outline{% endif %}'
+      isas_room_window:
+        friendly_name: 'Isas Room window'
+        entity_id: "binary_sensor.isas_room_window"
+        value_template: '{% if is_state("binary_sensor.isas_room_window", "on") %}Open{% elif is_state("binary_sensor.isas_room_window", "off")%}Closed{% else %}Unknown{% endif %}'
+        icon_template: '{% if is_state("binary_sensor.isas_room_window", "on") %}mdi:window-open{% elif is_state("binary_sensor.isas_room_window", "off")%}mdi:window-closed{% else %}mdi:comment-question-outline{% endif %}'
+
+
       outer_windows:
         friendly_name: 'Outer Windows'
         entity_id: binary_sensor.bedroom_window, binary_sensor.dining_room_window
@@ -29,7 +25,9 @@ sensor:
           {% if is_state("binary_sensor.dining_room_window", "on") %}
             Dining room
           {% elif is_state("binary_sensor.bedroom_window", "on") %}
-            Bedroom
+            Bedroom          
+          {% elif is_state("binary_sensor.isas_room_window", "on") %}
+            Isas room
           {% else %}
             Closed
           {% endif %}
