--- a/packages/plants.yaml
+++ b/packages/plants.yaml
@@ -21,18 +21,18 @@
 #       - conductivity
 #       - battery
 
-#       ## Mi flora 2
-#   - platform: miflora
-#     mac: "C4:7C:8D:63:13:9B"
-#     name: Basil
-#     median: 3
-#     force_update: false
-#     monitored_conditions:
-#       - temperature
-#       - light
-#       - moisture
-#       - conductivity
-#       - battery
+      ## Mi flora 2
+  # - platform: miflora
+    # mac: "C4:7C:8D:63:13:9B"
+    # name: Thyme
+    # median: 3
+    # force_update: false
+    # monitored_conditions:
+    #   - temperature
+    #   - light
+    #   - moisture
+    #   - conductivity
+    #   - battery
 
 #       ## Mi flora 3
 #   - platform: miflora
@@ -47,42 +47,38 @@
 #       - conductivity
 #       - battery
 
-# plant:
-#   basil:
-#     sensors:
-#       moisture: sensor.basil_moisture
-#       battery: sensor.basil_battery
-#       temperature: sensor.basil_temperature
-#       conductivity: sensor.basil_conductivity
-#       brightness: sensor.basil_light_intensity
-#     min_moisture: 20
-#     max_moisture: 60
-#     min_battery: 10
-#     min_conductivity: 500
-#     max_conductivity: 3000
-
-#   mint:
-#     sensors:
-#       moisture: sensor.mint_moisture
-#       battery: sensor.mint_battery
-#       temperature: sensor.mint_temperature
-#       conductivity: sensor.mint_conductivity
-#       brightness: sensor.mint_light_intensity
-#     min_moisture: 20
-#     max_moisture: 60
-#     min_battery: 10
-#     min_conductivity: 500
-#     max_conductivity: 3000 
-
-#   tomato:
-#     sensors:
-#       moisture: sensor.tomato_moisture
-#       battery: sensor.tomato_battery
-#       temperature: sensor.tomato_temperature
-#       conductivity: sensor.tomato_conductivity
-#       brightness: sensor.tomato_light_intensity
-#     min_moisture: 20
-#     max_moisture: 60
-#     min_battery: 10
-#     min_conductivity: 500
-#     max_conductivity: 3000      
+plant:
+  one:
+    sensors:
+      moisture: sensor.miflora_1_moisture
+      temperature: sensor.miflora_1_temperature
+      conductivity: sensor.miflora_1_soil_conductivity
+      brightness: sensor.miflora_1_illuminance
+    min_moisture: 15
+    max_moisture: 60
+    min_temperature: 1
+    max_temperature: 35
+    min_conductivity: 1
+    max_conductivity: 2000
+  two:
+    sensors:
+      moisture: sensor.miflora_2_moisture
+      temperature: sensor.miflora_2_temperature
+      conductivity: sensor.miflora_2_soil_conductivity
+      brightness: sensor.miflora_2_illuminance
+    min_moisture: 20
+    max_moisture: 60
+    min_battery: 10
+    min_conductivity: 500
+    max_conductivity: 3000
+  three:
+    sensors:
+      moisture: sensor.miflora_3_moisture
+      temperature: sensor.miflora_3_temperature
+      conductivity: sensor.miflora_3_soil_conductivity
+      brightness: sensor.miflora_3_illuminance
+    min_moisture: 20
+    max_moisture: 60
+    min_battery: 10
+    min_conductivity: 500
+    max_conductivity: 3000
