--- a/configuration.yaml
+++ b/configuration.yaml
@@ -74,7 +74,7 @@ lovelace:
 map:
 
 frontend:
-  themes: !include_dir_named themes
+  themes: !include_dir_merge_named themes
   extra_html_url:
     - /local/hass-bha-icons.html
 
