--- a/packages/cameras/ring_doorbell_front_door.yaml
+++ b/packages/cameras/ring_doorbell_front_door.yaml
@@ -3,6 +3,6 @@ binary_sensor:
     sensors:
       ring_low_battery:
         friendly_name: 'Ring Doorbell Low Battery'
-        entity_id: "sensor.sensor.ring_doorbell_battery"
+        entity_id: "sensor.ring_doorbell_battery"
         device_class: battery
-        value_template: "{{ states('sensor.sensor.ring_doorbell_battery')|float < 20 }}"
+        value_template: "{{ states('sensor.ring_doorbell_battery')|float < 20 }}"
