--- a/themes/original-hk-light.yaml
+++ b/themes/original-hk-light.yaml
@@ -1,34 +1,35 @@
-ha-card-border-radius: "12px" # Rounded corners on cards. NOTE: may not work with custom cards.
-# background: 'center / cover no-repeat url("/local/lovelace_ui/grey-gradient.png") fixed'
-# background: "right/auto linear-gradient(23deg, rgba(211,211,211,1) 0%, rgba(223,223,223,1) 34%, rgba(255,255,255,1) 100%)"
+original-hk-light:
+  ha-card-border-radius: "12px" # Rounded corners on cards. NOTE: may not work with custom cards.
+  # background: 'center / cover no-repeat url("/local/lovelace_ui/grey-gradient.png") fixed'
+  # background: "right/auto linear-gradient(23deg, rgba(211,211,211,1) 0%, rgba(223,223,223,1) 34%, rgba(255,255,255,1) 100%)"
 
 
-### This is my own styling, this is the style for the lovelace interface which will be applied globally.
-# background-image: 'center / cover no-repeat url("/local/images/original-homekit-wallpaper.png") fixed'
-border-radius: '12px'
-homekit-card-on: 'rgb(255, 251, 239)'
-homekit-card-off: 'rgb(255, 251, 239)'
-icon-color-off: gray
-name-color-off: gray
-state-color-off: gray
-lock-color-off: 'rgb(80,80,80)'
-label-color-off: gray
-name-color-on: black
-state-color-on: black
-lock-color-on: black
-label-color-on: gray
-weather-day: 'rgb(255, 251, 239)'
-weather-night: 'rgb(255, 251, 239)'
-weather-color: black
-upcoming-color: black
-header-color: white # Changed/Added in 0.11.2
+  ### This is my own styling, this is the style for the lovelace interface which will be applied globally.
+  # background-image: 'center / cover no-repeat url("/local/images/original-homekit-wallpaper.png") fixed'
+  border-radius: '12px'
+  homekit-card-on: 'rgb(255, 251, 239)'
+  homekit-card-off: 'rgb(255, 251, 239)'
+  icon-color-off: gray
+  name-color-off: gray
+  state-color-off: gray
+  lock-color-off: 'rgb(80,80,80)'
+  label-color-off: gray
+  name-color-on: black
+  state-color-on: black
+  lock-color-on: black
+  label-color-on: gray
+  weather-day: 'rgb(255, 251, 239)'
+  weather-night: 'rgb(255, 251, 239)'
+  weather-color: black
+  upcoming-color: black
+  header-color: white # Changed/Added in 0.11.2
 
-### All the lines below have been # Changed/Added in 0.11.0
-primary-color: '#000000'
-paper-card-background-color: 'rgb(255, 251, 239)'
-primary-background-color: 'rgb(255, 251, 239)'
-secondary-background-color: 'rgb(255, 251, 239)'
-paper-listbox-background-color: 'rgb(255, 251, 239)'
-paper-item-icon-active-color: '#b58e31'
-table-row-alternative-background-color: 'rgb(181, 181, 181)'
+  ### All the lines below have been # Changed/Added in 0.11.0
+  primary-color: '#000000'
+  paper-card-background-color: 'rgb(255, 251, 239)'
+  primary-background-color: 'rgb(255, 251, 239)'
+  secondary-background-color: 'rgb(255, 251, 239)'
+  paper-listbox-background-color: 'rgb(255, 251, 239)'
+  paper-item-icon-active-color: '#b58e31'
+  table-row-alternative-background-color: 'rgb(181, 181, 181)'
 
